--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daisy Khala</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Fruit Brust</title>
+   <!-- google font  -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+     <!-- font awesome  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- daisy ui  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- tailwind custom class -->
@@ -16,50 +20,60 @@
             extend: {
               colors: {
                 clifford: '#da373d',
-                'bike-btn': '#E76F51',
-                'bike-bg': 'rgba(231, 111, 81, 0.10)',
               }
             }
           }
         }
       </script>
+      <!-- custom css  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- navbar start here -->
-  <header class="container mx-auto ">
-        <nav>
-            <div class="navbar bg-base-100">
-                <div class="flex-1">
-                <div class="dropdown">
-                    <label tabindex="0" class="btn btn-ghost lg:hidden">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
-                    </label>
-                    <ul tabindex="0" class="menu text-base menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                    <li><a>Home</a></li>
-                    <li><a>Shop</a></li>
-                    <li><a>News</a></li>
-                    <li><a>Contact</a></li>
-                    </ul>
-                </div>
-                <a class="btn btn-ghost normal-case text-4xl">Bike Dekho</a>
-                </div>
-                <div class="navbar-center hidden lg:flex">
-                <ul class="menu text-base menu-horizontal px-1">
-                    <li><a>Home</a></li>
-                    <li><a>Shop</a></li>
-                    <li><a>News</a></li>
-                    <li><a>Contact</a></li>
-                </ul>
-                </div>
-                <div class="">
-                <a class="btn btn-error bg-bike-btn text-white">Login</a>
-                </div>
+  <header class="container mx-auto">
+        <nav class="my-8">
+          <div class="navbar lg:rounded-[50px] lg:bg-[#F85559] items-center px-8 py-4 text-white">
+            <div class="navbar-start hidden lg:flex">
+              <ul class="menu menu-horizontal px-1 text-lg">
+                <li><a>Home</a></li>
+                <li><a>About Us</a></li>
+                <li><a>Shop</a></li>
+                <li><a>All Fruits</a></li>
+              </ul>
             </div>
+            <div class="navbar-start flex justify-center items-center lg:navbar-center">
+              <a class="btn btn-ghost normal-case text-xl text-[#121212] lg:text-white"><img src="images/logo.png" class="w-12" alt=""> Fruit Burst</a>
+            </div>
+            <div class="navbar-end">
+              <!-- mobile nav  -->
+              <div class="dropdown">
+                <label tabindex="0" class="btn btn-ghost lg:hidden">
+                  <i class="fa-solid fa-bars text-2xl text-[#121212]"></i>
+                </label>
+                <ul tabindex="0" class="text-[#121212] right-0 menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                  <li><a>Home</a></li>
+                  <li><a>About Us</a></li>
+                  <li><a>Shop</a></li>
+                  <li><a>All Fruits</a></li>
+
+                </ul>
+              </div>
+              <!-- mobile nav  -->
+              <div class="hidden lg:block">
+                <div class="form-control">
+                  <div class="relative">
+                    <input type="text" placeholder="Search here" class="input rounded-[50px] w-full pr-16 text-[#0C0C0C66]" /> 
+                    <button class="btn  bg-transparent absolute top-0 right-0 border-none"><i class="fa-solid fa-magnifying-glass"></i></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </nav>
         <!-- navbar end here  -->
         <!-- slider start here -->
         
+         
   </header>
   
   <main class="container mx-auto my-16">
