--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </div>
      </div>
      <!-- card part  -->
-     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mt-14">
        <!-- 1st card -->
        <div class="card border border-[#1212121A] space-y-6 rounded-lg shadow-xl">
         <figure class="px-10 pt-10">
@@ -271,7 +271,7 @@
             </dialog>
           </div>
         </div>
-      </div>
+       </div>
        <!-- 2nd card -->
        <div class="card border border-[#1212121A] space-y-6 rounded-lg shadow-xl">
         <figure class="px-10 pt-10">
@@ -283,17 +283,17 @@
           <p>Orange</p>
           <div class="rating">
             <div class="rating rating-lg rating-half">
-               <input type="radio" name="rating-10" class="rating-hidden" />
-                    <input type="radio" name="rating-10" class="bg-[#f85559] mask mask-star-2 mask-half-1" />
-                    <input type="radio" name="rating-10" class="bg-[#f85559] mask mask-star-2 mask-half-2" />
-                    <input type="radio" name="rating-10" class="bg-[#f85559] mask mask-star-2 mask-half-1" />
-                    <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-2" />
-                    <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-1" />
-                    <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-2" />
-                    <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-1" />
-                    <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-2" />
-                    <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-1" />
-                    <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-2" />
+              <input type="radio" name="rating-10" class="rating-hidden" />
+              <input type="radio" name="rating-10" class="bg-[#f85559] mask mask-star-2 mask-half-1" />
+              <input type="radio" name="rating-10" class="bg-[#f85559] mask mask-star-2 mask-half-2" />
+              <input type="radio" name="rating-10" class="bg-[#f85559] mask mask-star-2 mask-half-1" />
+              <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-2" />
+              <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-1" />
+              <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-2" />
+              <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-1" />
+              <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-2" />
+              <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-1" />
+              <input type="radio" name="rating-10" class="bg-[#fbc0a8] mask mask-star-2 mask-half-2" />
             </div>
           </div>
           <div class="card-actions">
@@ -330,7 +330,7 @@
             </dialog>
           </div>
         </div>
-      </div>
+       </div>
        <!-- 3rd card -->
        <div class="card border border-[#1212121A] space-y-6 rounded-lg shadow-xl">
         <figure class="px-10 pt-10">
@@ -389,9 +389,9 @@
             </dialog>
           </div>
         </div>
-      </div>
+       </div>
        <!-- 4th card -->
-       <div class="card border border-[#1212121A] space-y-6 rounded-lg shadow-xl">
+       <div class="card border border-[#1212121A] space-y-6 rounded-lg shadow-xl">  
         <figure class="px-10 pt-10">
           <img src="images/fruit9.png" alt="" class="" />
         </figure>
@@ -448,7 +448,7 @@
             </dialog>
           </div>
         </div>
-      </div>
+       </div>
      </div>
    </section>
     
