--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </figure>
         <div class="card-body space-y-2 items-center text-center">
           <h2 class="card-title font-bold text-2xl">12.90$ - 18.85$</h2>
-          <span></span>
+          </span>
           <p>Apples</p>
           <div class="rating">
             <div class="rating rating-lg rating-half">
@@ -450,6 +450,85 @@
         </div>
        </div>
      </div>
+     <!-- bottom part -->
+     <div class="text-center mt-14">
+      <button class="btn cs-btn">Shop All</button>
+     </div>
+   </section>
+   <!-- meet team section start  here  -->
+   <section class="meet py-14 px-5 md:py-20 md:px-14">
+    <!-- meet-top part  -->
+    <div class="text-center space-y-2">
+      <h2 class="text-white text-4xl lg:text-5xl font-bold">Meet the team section</h2>
+      <p class="text-white max-w-2xl mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+    </div>
+    <!-- meet card  -->
+    <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 md:gap-5">
+      <div class="text-center md:space-y-2">
+        <img src="images/member1.png" class="mx-auto w-32" alt="">
+        <h3 class="text-white text-2xl font-bold">Awlad Hossain</h3>
+        <p class="text-white max-w-2xl mx-auto">Fruits Expert</p>
+        <div class="flex justify-center gap-3 pt-2">
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white  text-2xl"><i class="fa-brands fa-facebook-f"></i></a>
+          </div>
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white bg-[#F85559] text-2xl"><i class="fa-brands fa-twitter"></i></a>
+          </div>
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white bg-[#F85559] text-2xl"><i class="fa-brands fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="text-center space-y-2">
+        <img src="images/member2.png" class="mx-auto w-32" alt="">
+        <h3 class="text-white text-2xl font-bold">Safia Chowdhury</h3>
+        <p class="text-white max-w-2xl mx-auto">Fruits Expert</p>
+        <div class="flex justify-center gap-3 pt-2">
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white  text-2xl"><i class="fa-brands fa-facebook-f"></i></a>
+          </div>
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white bg-[#F85559] text-2xl"><i class="fa-brands fa-twitter"></i></a>
+          </div>
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white bg-[#F85559] text-2xl"><i class="fa-brands fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="text-center space-y-2">
+        <img src="images/member3.png" class="mx-auto w-32" alt="">
+        <h3 class="text-white text-2xl font-bold">Rokib Hossain</h3>
+        <p class="text-white max-w-2xl mx-auto">Fruits Expert</p>
+        <div class="flex justify-center gap-3 pt-2">
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white  text-2xl"><i class="fa-brands fa-facebook-f"></i></a>
+          </div>
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white bg-[#F85559] text-2xl"><i class="fa-brands fa-twitter"></i></a>
+          </div>
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white bg-[#F85559] text-2xl"><i class="fa-brands fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="text-center space-y-2">
+        <img src="images/member4.png" class="mx-auto w-32" alt="">
+        <h3 class="text-white text-2xl font-bold">Chaity</h3>
+        <p class="text-white max-w-2xl mx-auto">Fruits Expert</p>
+        <div class="flex justify-center gap-3 pt-2">
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white  text-2xl"><i class="fa-brands fa-facebook-f"></i></a>
+          </div>
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white bg-[#F85559] text-2xl"><i class="fa-brands fa-twitter"></i></a>
+          </div>
+          <div class="rounded-[50%] bg-[#F85559] w-10 h-10 flex justify-center items-center ">
+            <a href="" class="text-white bg-[#F85559] text-2xl"><i class="fa-brands fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
    </section>
     
   </main>
