--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                   <li><a>About Us</a></li>
                   <li><a>Shop</a></li>
                   <li><a>All Fruits</a></li>
+                  <li class="w-3/4">
+                    <div class="form-control w-3/4">
+                      <div class="relative mob w-3/4">
+                        <input type="text" placeholder="Search here" class="input rounded-[50px] w-full border border-[#121212]  text-[#0C0C0C66]" /> 
+                        <button class="btn  bg-transparent absolute top-0 mobile-search border-none"><i class="fa-solid fa-magnifying-glass"></i></button>
+                      </div>
+                    </div>
+                  </li>
 
                 </ul>
               </div>
@@ -74,12 +82,12 @@
         <!-- slider start here -->
         <div class="carousel w-full h-[500px] lg:h-[768px]">
           <div id="slide1" class="carousel-item relative w-full">
-            <div class="hero rounded-lg overflow-hidden" style="background-image: url(./images/banner4.png);">
+            <div class="hero rounded-lg overflow-hidden" style="background-image: url(./images/banner1.png);">
               <div class="hero-overlay"></div>
               <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-md">
                   <h1 class="mb-8  text-4xl lg:text-5xl font-bold">Exotic tastes at your <br> doorstep</h1>
-                  <p class="mb-8">We supply highly quality organic products</p>
+                  <p class="mb-8 text-white">We supply highly quality organic products</p>
                   <div>
                     <a class="text-xl cs-btn" href="#">Shop Now</a>
                   </div>
@@ -97,7 +105,7 @@
               <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-md">
                   <h1 class="mb-8 text-4xl lg:text-5xl font-bold">Exotic tastes at your <br> doorstep</h1>
-                  <p class="mb-8">We supply highly quality organic products</p>
+                  <p class="mb-8 text-white">We supply highly quality organic products</p>
                   <div>
                     <a class="text-xl cs-btn" href="#">Shop Now</a>
                   </div>
@@ -115,7 +123,7 @@
               <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-md">
                   <h1 class="mb-8 text-4xl lg:text-5xl font-bold">Exotic tastes at your <br> doorstep</h1>
-                  <p class="mb-8">We supply highly quality organic products</p>
+                  <p class="mb-8 text-white">We supply highly quality organic products</p>
                   <div>
                     <a class="text-xl cs-btn" href="#">Shop Now</a>
                   </div>
@@ -128,12 +136,12 @@
             </div>
           </div> 
           <div id="slide4" class="carousel-item relative w-full">
-            <div class="hero rounded-lg overflow-hidden" style="background-image: url(./images/banner1.png);">
+            <div class="hero rounded-lg overflow-hidden" style="background-image: url(./images/banner4.png);">
               <div class="hero-overlay"></div>
               <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-md">
                   <h1 class="mb-8 text-4xl lg:text-5xl font-bold">Exotic tastes at your <br> doorstep</h1>
-                  <p class="mb-8">We supply highly quality organic products</p>
+                  <p class="mb-8 text-white">We supply highly quality organic products</p>
                   <div>
                     <a class="text-xl cs-btn" href="#">Shop Now</a>
                   </div>
@@ -204,7 +212,7 @@
             </div> 
             <div class="flex flex-col">
               <span class="countdown font-bold text-5xl">
-                <span id="counterElement" style="--value:30;"></span> 
+                <span id="counterElement" style="--value:40;"></span> 
               </span>
               sec
             </div>
@@ -530,13 +538,144 @@
       </div>
     </div>
    </section>
-    
+    <!-- why choose start here -->
+    <section class="why-us py-16">
+      <!-- why choose-top part  -->
+      <div class="text-center space-y-2">
+        <h2 class=" text-4xl lg:text-5xl font-bold">Why Choose Us</h2>
+        <p class=" max-w-2xl mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+      </div>
+      <!-- why choose card  -->
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-10 lg:gap-5 items-center mt-16">
+        <!-- left  -->
+        <div class="space-y-12 order-2 lg:order-1">
+          <!-- 1st card -->
+          <div class="flex justify-start flex-col lg:flex-row text-center lg:text-left gap-5 items-center">
+            <div class="mx-auto lg:mx-0">
+              <span class="w-14 h-14  rounded-full bg-[#1212121A] text-[#121212] text-2xl flex items-center justify-center"><i class="fa-solid fa-user-group"></i></span>
+            </div>
+            <div class="flex-1 space-y-2">
+              <h3 class="text-[#121212] text-2xl font-bold">Dedicated Team</h3>
+              <hr class="mx-auto lg:mx-0">
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+          <!-- 2nd card -->
+          <div class="flex justify-start flex-col lg:flex-row text-center lg:text-left gap-5 items-center">
+            <div class="mx-auto lg:mx-0">
+              <span class="w-14 h-14  rounded-full bg-[#1212121A] text-[#121212] text-2xl flex items-center justify-center"><i class="fa-regular fa-heart"></i></span>
+            </div>
+            <div class="flex-1 space-y-2">
+              <h3 class="text-[#121212] text-2xl font-bold">Fresh is Best</h3>
+              <hr class="mx-auto lg:mx-0">
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+          <!-- 3rd card -->
+          <div class="flex justify-start flex-col lg:flex-row text-center lg:text-left gap-5 items-center">
+            <div class="mx-auto lg:mx-0">
+              <span class="w-14 h-14  rounded-full bg-[#1212121A] text-[#121212] text-2xl flex items-center justify-center"><i class="fa-solid fa-gift"></i></span>
+            </div>
+            <div class="flex-1 space-y-2">
+              <h3 class="text-[#121212] text-2xl font-bold">Gift Certificates</h3>
+              <hr class="mx-auto lg:mx-0">
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+        </div>
+        <!-- middle img  -->
+        <div class="order-1 lg:order-2">
+          <img src="images/whychoose1.png" class="m-auto" alt="">
+        </div>
+        <!-- right -->
+        <div class="space-y-12 order-3 lg:order-3">
+          <!-- 1st card -->
+          <div class="flex justify-end flex-col lg:flex-row text-center lg:text-right gap-5 items-center">
+            <div class="flex-1 space-y-2 order-2 lg:order-1">
+              <h3 class="text-[#121212] text-2xl font-bold">Integrated Supplier</h3>
+              <hr class="mx-auto lg:ml-auto lg:mx-0">
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+            <div class="mx-auto lg:ml-auto lg:mx-0 order-1 lg:order-2">
+              <span class="w-14 h-14  rounded-full bg-[#1212121A] text-[#121212] text-2xl flex items-center justify-center"><i class="fa-solid fa-seedling"></i></span>
+            </div>
+          </div>
+          <!-- 2nd card -->
+          <div class="flex justify-end flex-col lg:flex-row text-center lg:text-right gap-5 items-center">
+            <div class="flex-1 space-y-2 order-2 lg:order-1">
+              <h3 class="text-[#121212] text-2xl font-bold">Sustainable Practice</h3>
+              <hr class="mx-auto lg:ml-auto lg:mx-0">
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+            <div class="mx-auto lg:ml-auto lg:mx-0 order-1 lg:order-2">
+              <span class="w-14 h-14  rounded-full bg-[#1212121A] text-[#121212] text-2xl flex items-center justify-center"><i class="fa-solid fa-ice-cream"></i></span>
+            </div>
+          </div>
+          <!-- 3rd card -->
+          <div class="flex justify-end flex-col lg:flex-row text-center lg:text-right gap-5 items-center">
+            <div class="flex-1 space-y-2 order-2 lg:order-1">
+              <h3 class="text-[#121212] text-2xl font-bold">The Benefits Only</h3>
+              <hr class="mx-auto lg:ml-auto lg:mx-0">
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+            <div class="mx-auto lg:ml-auto lg:mx-0 order-1 lg:order-2">
+              <span class="w-14 h-14  rounded-full bg-[#1212121A] text-[#121212] text-2xl flex items-center justify-center"><i class="fa-solid fa-thumbs-up"></i></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
-  <footer class="bg-[#0B0D17]">
-   
+  <footer class="bg-[#0B0D17] py-16">
+    <div class="container mx-auto px-5 lg:px-0 space-y-10">
+      <div class="flex justify-center items-center">
+        <a class="btn btn-ghost normal-case text-xl text-white"><img src="images/logo.png" class="w-12" alt=""> Fruit Burst</a>
+      </div>
+      <ul class="flex justify-center items-center flex-wrap gap-x-10 gap-y-4 lg:gap-10">
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">About Us</a>
+        </li>
+        <li>
+          <a href="#">Shop</a>
+        </li>
+        <li>
+          <a href="#">All Fruits</a>
+        </li>
+        <li>
+          <a href="#">Support</a>
+        </li>
+        <li>
+          <a href="#">My Account</a>
+        </li>
+      </ul>
+      <ul class="flex justify-center items-center flex-wrap gap-5">
+        <li>
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa-brands fa-apple"></i></a>
+        </li>
+      </ul>
+
+    </div>
   </footer>
   <script>
-    let counter = 30
+    let counter = 40
       setInterval(() => {
           if(counter>0){
             counter--
